fixed login button overlap

--- a/client/ta-palv2/src/components/styles/Home.css
+++ b/client/ta-palv2/src/components/styles/Home.css
@@ -1,6 +1,6 @@
-#land-signup {
+/* #land-signup {
     margin-top: 10px;
-}
+} */
 
 #email-row {
     margin-top: 10px;
